Moviendo a ruta más corta

--- a/Guia 2 Intro a ASP.NET Parte 2/Ejemplo 1/MvcPelicula/MvcPelicula.csproj
+++ b/Guia 2 Intro a ASP.NET Parte 2/Ejemplo 1/MvcPelicula/MvcPelicula.csproj
@@ -176,6 +176,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="SQL_SCRIPT\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
