--- a/Guia 2 Intro a ASP.NET Parte 2/Ejemplo 1/MvcPelicula/Web.config
+++ b/Guia 2 Intro a ASP.NET Parte 2/Ejemplo 1/MvcPelicula/Web.config
@@ -8,6 +8,12 @@
         <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
+  <connectionStrings>
+ <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-MvcPelicula-fefdc1f0-bd81-4ce9-b712-93a062e01031;Integrated Security=SSPI; AttachDBFilename=|DataDirectory|\aspnet-MvcPelicula-fefdc1f0-bd81-4ce9-b712-93a062e01031.mdf" 
+      providerName="System.Data.SqlClient" />
+ <add name="PeliculaDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-MvcPelicula;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\Peliculas.mdf"
+      providerName="System.Data.SqlClient" />
+ </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
